Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16744

Crash in ~TargetSetupPage for plugin test opening a project

    XMLWordPrintable

Details

    Description

      Running a plugin test that opens a project will crash at shutdown of Qt Creator, e.g.:

      ./qtcreator -test CppTools,test_modelmanager_extraeditorsupport_uiFiles

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-16744
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes